Move to JAVA 15 + Music